# Proyecto-PRORA

./: .dockerignore  .env.example  .env.pages.example  .gitignore  Dockerfile  README.md  docker-compose.ghcr.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  render.yaml  vite.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260712_0001_core.py  20260713_0002_data_lineage.py  20260713_0003_cnpv_class_composition.py  20260713_0004_bes_current_reference.py  20260714_0006_irca_index.py  (+2 more)
backend/app/: __init__.py  cli.py  main.py
backend/docs/: data-sources.md
backend/scripts/: _train_rest.py  expand_sync_and_train.py  operational_status.py  verify_release.py
backend/tests/: conftest.py  test_agent_service.py  test_alert_api_hardening.py  test_alert_deliveries.py  test_bes_parser.py  test_cnpv_class_composition.py  test_connectors_socrata.py  test_connectors_sources.py  test_core_auth.py  test_core_resources.py  test_core_system.py  test_data_lineage.py  test_disease_coverage.py  test_historical_territories.py  test_ingestion_jobs.py  test_ml_database_flow.py  test_ml_explainability.py  test_ml_features.py  test_ml_metrics.py  test_ml_pipeline.py  test_ml_readiness.py  test_pai_parser.py  test_platform_api.py  test_sivigila_microdata_2024.py  test_source_catalog_audit.py  test_source_schedule.py  test_territorial_sivigila.py  test_territory_catalog_regression.py
(+120 files in other folders)
