[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "prora-api"
version = "1.0.0"
description = "API de alerta temprana y analitica epidemiologica de PRORA"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "aiosqlite>=0.20,<1",
  "anyio>=4.4,<5",
  "argon2-cffi>=23.1,<26",
  "asyncpg>=0.29,<1",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "geoalchemy2>=0.15,<1",
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "pdfplumber>=0.11,<1",
  "PyJWT>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-multipart>=0.0.12,<1",
  "SQLAlchemy[asyncio]>=2.0.35,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
ml = [
  "joblib>=1.3,<2",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scikit-learn>=1.4,<2",
]
lstm = [
  "torch>=2.2,<3",
]
explainability = [
  "shap>=0.45,<1",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<7",
  "ruff>=0.7,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --basetemp=.pytest-tmp"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
